--- a/resume.qmd
+++ b/resume.qmd
@@ -4,6 +4,7 @@ title: "Résumé"
 
 You can view a PDF version of my résumé [here](resume/resume.pdf).
 
+
 # Professional Summary
 
 Motivated and detail-oriented marketing and analytics professional with a strong background in data analysis, digital marketing strategy, and technical writing. Proven experience in managing complex projects, producing clear technical documents, and leveraging digital tools to drive effective communication. Adept at collaborating cross-functionally to achieve objectives and deliver high-quality work under tight deadlines.
@@ -26,33 +27,31 @@ Motivated and detail-oriented marketing and analytics professional with a strong
 |------------------|------------------|-------------------|------------------|
 | Master of Science in Digital Marketing | 2023 – Expected Graduation 2025 | College of Business Administration | California State Polytechnic University, Pomona |
 
-| Master of Science in Digital Marketing | 2010 – 2015 | College of Letters, Arts, and Social Sciences | California State Polytechnic University, Pomona |
-
-|  |  |  | California State Polytechnic University, Pomona |
+| Master of Science in Digital Marketing \| 2010 – 2015 \| College of Letters, Arts, and Social Sciences \| California State Polytechnic University, Pomona \|
 
 # Work Experience
 
-### \[Technical Writer –Senior Specialist\], \[Southern California Edison\]
+### Technical Writer –Senior Specialist, Southern California Edison
 
-*\[12/2022 – Present\]*
+*12/2022 – Present*
 
--   \[Coordinated with multiple internal departments to draft project proposals and bids for submission to prospective clients\]
--   \[Exceed annual quota by writing, editing, and managing over 900 pages of technical documentation, including compliance narratives and program policy/procedure manuals\]
--   \[Contribute to the timely completion of high-visibility regulatory deliverables, including the Income-Qualified Monthly Report, Income-Qualified Annual Report, and Energy Efficiency Annual Report\]
--   \[Lead collaboration with regulatory affairs, legal counsel, program managers, and senior leadership to ensure reporting materials meet compliance standards, maintain data integrity, and are delivered accurately and on time\]
--   \[Champion editorial quality and brand consistency by enforcing the style guide standards and partnering with multiple teams to produce cohesive, audience-focused communications\]
--   \[Manage multiple documentation workflows while ensuring clear, accurate, and high-quality communications are delivered on time with multiple internal departments to draft project proposals and bids for submission to prospective clients\]
+-   Coordinated with multiple internal departments to draft project proposals and bids for submission to prospective clients
+-   Exceed annual quota by writing, editing, and managing over 900 pages of technical documentation, including compliance narratives and program policy/procedure manuals
+-   Contribute to the timely completion of high-visibility regulatory deliverables, including the Income-Qualified Monthly Report, Income-Qualified Annual Report, and Energy Efficiency Annual Report
+-   Lead collaboration with regulatory affairs, legal counsel, program managers, and senior leadership to ensure reporting materials meet compliance standards, maintain data integrity, and are delivered accurately and on time
+-   Champion editorial quality and brand consistency by enforcing the style guide standards and partnering with multiple teams to produce cohesive, audience-focused communications
+-   Manage multiple documentation workflows while ensuring clear, accurate, and high-quality communications are delivered on time with multiple internal departments to draft project proposals and bids for submission to prospective clients
 
 ------------------------------------------------------------------------
 
-### \[Project Coordinator\], \[JMDiaz Inc\]
+### Project Coordinator, JMDiaz Inc
 
-*\[01/2022 – 11/2022\]*
+*01/2022 – 11/2022*
 
--   \[Coordinated with multiple internal departments to draft project proposals and bids for submission to prospective clients\]
--   \[Tracked multiple projects and works with experts across multiple disciplines to ensure feasibility of proposals/bids\]\
--   \[Provided technical writing support to marketing department as needed for website and public relations content\]
--   \[Assisted with maintaining internal document archive, style guide standards, templates, and forms\]
+-   Coordinated with multiple internal departments to draft project proposals and bids for submission to prospective clients
+-   Tracked multiple projects and works with experts across multiple disciplines to ensure feasibility of proposals/bids
+-   Provided technical writing support to marketing department as needed for website and public relations content
+-   Assisted with maintaining internal document archive, style guide standards, templates, and forms
 
 ------------------------------------------------------------------------
 
@@ -60,23 +59,25 @@ Motivated and detail-oriented marketing and analytics professional with a strong
 
 *07/2015 – 12/2021*
 
--  [Was in charge of upkeep for over 900 digital records, including instruction manuals, addendums, and misc forms
--  Collaborated cross-functionally with research and development team to create instructions for current products
--  Managed multiple projects simultaneously while keeping deadlines in mind to ensure on time delivery
--  Certified, monitored, and applied for over 1300 state product certifications in the state of Massachusetts
--  Notified engineering, technical service, and warehouse workers of changes in instruction manuals
--  Coordinated with other companies to certify and translate manuals into three foreign languages
+-   Was in charge of upkeep for over 900 digital records, including instruction manuals, addendums, and misc forms
+-   Collaborated cross-functionally with research and development team to create instructions for current products
+-   Managed multiple projects simultaneously while keeping deadlines in mind to ensure on time delivery
+-   Certified, monitored, and applied for over 1300 state product certifications in the state of Massachusetts
+-   Notified engineering, technical service, and warehouse workers of changes in instruction manuals
+-   Coordinated with other companies to certify and translate manuals into three foreign languages
 
----
+------------------------------------------------------------------------
 
-### Technical Writer Intern, Robert H. Peterson Company  
+### Technical Writer Intern, Robert H. Peterson Company
+
 *08/2014 – 06/2015*
 
-- Created line drawings and photos of products, with emphasis in fireplaces and outdoor fire features
-- Revised technical documents based on feedback from customers and technical writer team  
-- Performed office clerk and secretarial duties as requested by direct report manager
-- Promoted and fostered a positive spirit in alumni to further increase involvement with the school
----
+-   Created line drawings and photos of products, with emphasis in fireplaces and outdoor fire features
+-   Revised technical documents based on feedback from customers and technical writer team\
+-   Performed office clerk and secretarial duties as requested by direct report manager
+-   Promoted and fostered a positive spirit in alumni to further increase involvement with the school
+
+------------------------------------------------------------------------
 
 ### Early Start English Summer Tutor, California State Polytechnic University, Pomona
 
@@ -91,11 +92,12 @@ Motivated and detail-oriented marketing and analytics professional with a strong
 # Volunteer Experience
 
 ### Don Bosco Technical Institute, Alumni Association’s Secretary
+
 *09/2017 – 09/2019*
 
-- Recorded minutes, created agendas for all meetings, and dispersed both minutes/agendas to all association members
-- Tracked and accounted for attendance, event participation, and alumni association board member donation amounts
-- Assisted committee with planning for the annual alumni retreat, golf tournament, and Black and Gold Gala
+-   Recorded minutes, created agendas for all meetings, and dispersed both minutes/agendas to all association members
+-   Tracked and accounted for attendance, event participation, and alumni association board member donation amounts
+-   Assisted committee with planning for the annual alumni retreat, golf tournament, and Black and Gold Gala
 
 ### Don Bosco Technical Institute, Alumni Association
 
